# csse341-labs-chenp5

./: .gitignore  README.md
01_Lab01/volumes/: attacker.pcap  hostA.pcap  hostB.pcap
02_Lab02/: traceroute.py
02_Lab02/volumes/: hostB.pcap  traceroute.pcap
03_Lab03/volumes/: failed-ping.pcap  ghost.py  lab3-attacker.pcap
04_Lab04/volumes/code/src/: main.c  print_icmp.c  print_ip.c
04_lab04/volumes/code/src/: CMakeLists.txt  main.c
05_Lab05/volumes/code/src/: ip_util.c  ping.c
05_lab05/volumes/: lab5-2.pcap  lab5_hostA.pcap
05_lab05/volumes/code/src/: CMakeLists.txt  icmp_util.c  pcap_util.c  ping.c
06_Lab06/: build_and_run.sh
06_Lab06/volumes/: arpcache.pcap  exp2_empty.pcap  exp2_incomplete.pcap  exp2_populated.pcap  exp3_empty.pcap  exp3_incomplete.pcap  exp_empty.pcap  exp_incomplete_v2.pcap  exp_populated.pcap
07_Lab07/volumes/: lab7_ping1.pcap  netcat.pcap
07_lab07/volumes/code/src/: poison.c  tcp_util.c
08_Lab08/volumes/code/: output.txt  simple_loop.c  simple_loop.run
09_Lab09/volumes/: lab7_sniff.pcap  lab7_sniffA.pcap  lab7_sniffA2.pcap  lab9_hijack.pcap  lab9_hijack2.pcap  lab9_hijack3.pcap  lab9_hijack4.pcap  lab9_telnet.pcap
09_Lab09/volumes/code/src/: arp_util.c  tcp_util.c
10_Lab10/volumes/: netsec_rules.nft  netsec_tbl.nft
11_Lab11/: docker-compose.yml
11_Lab11/volumes/: fix_depends.sh
Project/: docker-compose.yml
Project/volumes/code/: Readme.txt
Project/volumes/code/include/: sock_util.h  vpnclient.h  vpnserver.h
Project/volumes/code/src/: CMakeLists.txt  sock_util.c  vpnclient.c  (+1 more)
data/: transferFile.sh
